# imageeditor

./: .gitignore  CMakeLists.txt  DEVELOPMENT_STATUS.md  IMPROVEMENTS_IMPLEMENTED.md  LICENSE  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  start-services.bat  start-services.sh
config/: config.ini
scripts/: build.bat  build.sh  install-deps.sh  install-qt6.bat
services/: docker-compose.yml
services/ai-inference/: Dockerfile  main.py  requirements.txt  start.sh
services/assets/: Dockerfile  main.py  requirements.txt
services/auth/: Dockerfile  main.py  requirements.txt
services/collaboration/: Dockerfile  main.py  requirements.txt
services/model-registry/: Dockerfile  main.py
services/monitoring/: prometheus.yml
services/nginx/: nginx.conf
src/: crash_handler.cpp  crash_handler.h  main.cpp  main_qt.cpp
src/ai/: CMakeLists.txt  aiservice.h
src/core/: CMakeLists.txt  brush_engine.cpp  brush_engine.h  command.cpp  command.h  document.cpp  document.h  engine.cpp  engine.h  filter.h  layer.cpp  layer.h  raster_layer.cpp  raster_layer.h  tool.cpp  tool.h
src/gpu/: CMakeLists.txt  gpu_utils.cpp  opengl_renderer.cpp  opengl_shader.cpp  opengl_texture.cpp  render_target.cpp  shader_manager.cpp  vulkan_buffer.cpp  vulkan_command_pool.cpp  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_shader.cpp  vulkan_sync.cpp  vulkan_texture.cpp  vulkan_window.cpp  vulkan_window.h
src/plugins/: CMakeLists.txt
src/tools/: CMakeLists.txt  tools.cpp
src/ui/: CMakeLists.txt  brush_panel.cpp  brush_panel.h  canvas_view.cpp  canvas_view.h  canvas_widget.cpp  canvas_widget.h  canvaswidget.h  color_panel.cpp  color_panel.h  layer_panel.cpp  layer_panel.h  layer_widget.cpp  layer_widget.h  main_window.cpp  main_window.h  main_window_vulkan.cpp  main_window_vulkan.h  mainwindow.h  tool_panel.cpp  tool_panel.h
