# Command-line tools

# Create tools library
add_library(tools STATIC
    # Add source files here when they exist
    # converter.cpp
    # batch.cpp
)

# Set properties
set_target_properties(tools PROPERTIES
    CXX_STANDARD 20
    CXX_STANDARD_REQUIRED ON
)

# Include directories
target_include_directories(tools PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

# For now, create a minimal implementation to avoid linker errors
if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tools.cpp")
    # Create a minimal implementation file
    file(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/tools.cpp" "
#include <iostream>

// Minimal tools implementation
namespace tools {

void initializeTools() {
    std::cout << \"Tools system initialized\" << std::endl;
}

void cleanupTools() {
    std::cout << \"Tools system cleaned up\" << std::endl;
}

} // namespace tools
")
endif()

# Add the source file
target_sources(tools PRIVATE
    tools.cpp
)

# No external dependencies for now
